# clashauto

./: .gitignore  CLAUDE.md  capture.ps1  watch_build.py
.github/workflows/: release.yml
clashauto-c++/: CMakeLists.txt  README.md  resources.qrc
clashauto-c++/assets/: app.rc.in  icon.icns
clashauto-c++/assets/i18n/: de.json  en-US.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  tr.json  vi.json  zh-TW.json
clashauto-c++/build-qml/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  clashauto-qml_qmltyperegistrations.cpp  cmake_install.cmake
clashauto-c++/build-qml/.qt/: QtDeploySupport.cmake
clashauto-c++/build-qml/.qt/deploy_qml_imports/: clashauto_qml.cmake
clashauto-c++/build-qml/.qt_plugins/: Qt6_QmlPlugins_Imports_clashauto-qml.cmake  Qt6_QmlPlugins_Imports_clashauto-qml.rsp
clashauto-c++/build-qml/.rcc/: clashauto-qml_raw_qml_0.qrc  qmake_ClashAuto.qrc  qrc_clashauto-qml_raw_qml_0.cpp  qrc_qmake_ClashAuto.cpp
clashauto-c++/build-qml/.rcc/qmlcache/: clashauto-qml_qml_loader_file_list.rsp  clashauto-qml_qmlcache_loader.cpp
clashauto-c++/build-qml/.rcc/qmlcache/clashauto-qml_qml/: AboutPage_qml.cpp  BandwidthChart_qml.cpp  Card_qml.cpp  ConnectionsWindow_qml.cpp  FooterSwitch_qml.cpp  LogTimeline_qml.cpp  LogsPage_qml.cpp  Main_qml.cpp  MetricCard_qml.cpp  NavButton_qml.cpp  NodeRow_qml.cpp  SettingsPage_qml.cpp  StatusPage_qml.cpp  SubscriptionsPage_qml.cpp  Theme_qml.cpp  UpdateWindow_qml.cpp
clashauto-c++/build-qml/Clash Auto.app/Contents/: Info.plist
clashauto-c++/build-qml/Clash Auto.app/Contents/MacOS/: Clash Auto  com.yuehongsun.auto.helper
clashauto-c++/build-qml/ClashAuto/: clashauto-qml_qml_module_dir_map.qrc  qmldir
clashauto-c++/build-qml/ClashAuto/qml/: AboutPage.qml  Card.qml  Main.qml  MetricCard.qml  NavButton.qml  NodeRow.qml  SettingsPage.qml  StatusPage.qml  SubscriptionsPage.qml  Theme.qml  UpdateWindow.qml
clashauto-c++/build-qml/clashauto-helper_autogen/: deps  moc_predefs.h
clashauto-c++/build-qml/clashauto-qml_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
clashauto-c++/build-qml/clashauto-qml_autogen/EWIEGA46WW/: qrc_resources.cpp
clashauto-c++/build-qml/clashauto-qml_autogen/UVLADIE3JM/: moc_ClashService.cpp  moc_ClashService.cpp.d  moc_ClashService.cpp.json  moc_CoreController.cpp  moc_CoreController.cpp.d  moc_CoreController.cpp.json  moc_SubscriptionStore.cpp  moc_SubscriptionStore.cpp.d  moc_SubscriptionStore.cpp.json  moc_TrayController.cpp  moc_TrayController.cpp.d  moc_TrayController.cpp.json
clashauto-c++/build-qml/clashauto-qml_autogen/VLDSMZLXNG/: moc_AboutController.cpp  moc_AboutController.cpp.d  moc_AboutController.cpp.json  moc_ConnectionsModel.cpp  moc_ConnectionsModel.cpp.d  moc_ConnectionsModel.cpp.json  moc_LogModel.cpp  moc_LogModel.cpp.d  moc_LogModel.cpp.json  moc_NodeListModel.cpp  moc_NodeListModel.cpp.d  moc_NodeListModel.cpp.json  moc_QmlBridge.cpp  moc_QmlBridge.cpp.d  moc_QmlBridge.cpp.json  moc_SettingsController.cpp  moc_SettingsController.cpp.d  moc_SettingsController.cpp.json  moc_SubscriptionsController.cpp  moc_SubscriptionsController.cpp.d  moc_SubscriptionsController.cpp.json  moc_UpdateController.cpp  moc_UpdateController.cpp.d  moc_UpdateController.cpp.json
clashauto-c++/build-qml/meta_types/: clashauto-qml_json_file_list.txt  clashauto-qml_json_file_list.txt.timestamp  qt6clashauto-qml_metatypes.json  qt6clashauto-qml_metatypes.json.gen
clashauto-c++/build-qml/qmltypes/: clashauto-qml_foreign_types.txt
clashauto-c++/docs/: feature-status.md  legacy-ui-spec.md  ui-implementation-gap.md
clashauto-c++/helper/: HelperProtocol.h  com.clashrauto.clashauto.helper.plist  helper_main.mm
clashauto-c++/qml/: ARCHITECTURE.md  BandwidthChart.qml  ConnectionsWindow.qml  FooterSwitch.qml  LogTimeline.qml  LogsPage.qml  Main.qml  MetricCard.qml  NavButton.qml  NodeRow.qml  RuleEditorWindow.qml  SettingsPage.qml  StatusPage.qml  SubscriptionsPage.qml  Theme.qml  UpdateWindow.qml
clashauto-c++/src/: AppConfig.cpp  AppConfig.h  ClashService.cpp  ClashService.h  ConfigBuilder.cpp  ConfigBuilder.h  CoreController.cpp  CoreController.h  MacHelperClient.h  MacHelperClient.mm  MacSpeedItem.h  MacSpeedItem.mm  MacWindow.h  MacWindow.mm  MainWindow.cpp  MainWindow.h  SubParser.cpp  SubParser.h  SubscriptionStore.cpp  SubscriptionStore.h  TrafficChart.cpp  TrafficChart.h  TrayController.cpp  TrayController.h  Version.h.in  WinWindow.cpp  WinWindow.h  main.cpp  main_qml.cpp
clashauto-c++/src/qml/: AboutController.cpp  AboutController.h  ConnectionsModel.cpp  ConnectionsModel.h  I18n.cpp  I18n.h  LogModel.cpp  LogModel.h  NodeListModel.cpp  NodeListModel.h  QmlBridge.cpp  QmlBridge.h  SettingsController.cpp  SettingsController.h  SubscriptionsController.cpp  SubscriptionsController.h  UpdateController.cpp  UpdateController.h
